Fix z-index issue with directional typing popup and speed slider.

--- a/source/styles/DirectionPickerPopup.scss
+++ b/source/styles/DirectionPickerPopup.scss
@@ -26,6 +26,7 @@ button[aria-checked=true].directionPickerButton {
     grid-template-rows: 52px 52px 52px 52px;
     background: var(--direction-picker-background);
     border: solid 2px var(--direction-picker-border);
+    z-index: 2;
 }
 
 .directionPickerHexagon {
